# glrnvim

./: .all-contributorsrc  .gitignore  CHANGES.md  Cargo.toml  PKGBUILD  README.md  config.yml  glrnvim.desktop  glrnvim.yml
.github/workflows/: rust.yml
src/: config.rs  error.rs  main.rs
src/backend/: alacritty.rs  foot.rs  kitty.rs  mod.rs  urxvt.rs  wezterm.rs
