[package]
name = "glrnvim"
version = "1.1.1"
authors = ["beeender <chenmulong@gmail.com>"]
edition = "2018"

[dependencies]
regex = "1"
which = "4.0.2"
dirs = "1.0"
tempfile = "3.1"
# 1.0.98 doesn't compile under Mac
serde = { version = "=1.0.97", features = ["derive"] }
serde_yaml = "0.8.14"
shellexpand = "1.1.1"
log = "0.4.14"
env_logger = "0.8.3"

[package.metadata.deb]
maintainer = "beeender <chenmulong@gmail.com>"
copyright = "2019, beeender <chemulong@gmail.com>"
license-file = ["LICENSE", "9"]
depends = "$auto"
extended-description = "glrnvim wraps nvim with your favourite terminal into a standalone, non-fancy but daily-usable neovim GUI."
section = "editors"
priority = "optional"
assets = [
    ["target/release/glrnvim", "usr/bin/", "755"],
    ["glrnvim.desktop", "usr/share/applications/", "644"],
    ["glrnvim.svg", "usr/share/icons/hicolor/scalable/apps/", "644"]
]

[profile.dev]
opt-level = 0
debug = true
