[package]
name = "glrnvim"
version = "1.5.0"
authors = ["beeender <chenmulong@gmail.com>"]
edition = "2024"
description = "glrnvim combines OpenGL (possibly), Rust and NeoVIM together, to make the fastest, simplest neovim GUI."
readme = "README.md"
license = "GPL-3.0"

[dependencies]
which = "7.0.*"
dirs = "6.0.*"
tempfile = "3.20.*"
# 1.0.98 doesn't compile under Mac
serde = { version = "1.0.*", features = ["derive"] }
serde_yaml = "0.9.34"
toml_edit = "0.22.*"
shellexpand = "3.1.*"
log = "0.4.*"
env_logger = "0.11.*"
sysinfo = "0.35.*"
rust-ini = "0.21"

[package.metadata.deb]
maintainer = "beeender <chenmulong@gmail.com>"
copyright = "2019, beeender <chemulong@gmail.com>"
license-file = ["LICENSE", "9"]
depends = "$auto"
extended-description = "glrnvim wraps nvim with your favourite terminal into a standalone, non-fancy but daily-usable neovim GUI."
section = "editors"
priority = "optional"
assets = [
    ["target/release/glrnvim", "usr/bin/", "755"],
    ["glrnvim.desktop", "usr/share/applications/", "644"],
    ["glrnvim.svg", "usr/share/icons/hicolor/scalable/apps/", "644"]
]

[profile.dev]
opt-level = 0
debug = true
